# tuning-system

./: README.md  pyproject.toml
tuningsystem/: utils.py
tuningsystem/dyad/: octave_equivalent_real.py  octave_equivalent_real_simplex.py  octave_equivalent_real_transform.py  real.py
tuningsystem/embeddings/: moebius.py  torus.py  twist.py
tuningsystem/pair/: octave_equivalent_real.py  octave_equivalent_real_transform.py  real.py
tuningsystem/triplet/: real_transform.py
