[tool.poetry]
name = "tuningsystem"
version = "0.1.0"
description = ""
authors = ["baites <bazterra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.3"

[tool.poetry.scripts]
real_pair = "tuningsystem.pair.real:main"
octave_equivalen_real_pair = "tuningsystem.pair.octave_equivalent_real:main"
octave_equivalen_real_pair_transform = "tuningsystem.pair.octave_equivalent_real_transform:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
